# NextGenCard

./: main.py  pyproject.toml
src/config/: logger_config.py  settings.py
src/dependencies/: logger.py
src/util/: base.py  models.py  schemas.py
