[tool.poetry]
name = "nextgencard"
version = "0.1.0"
description = ""
authors = ["Olena <155203553+elgatoafk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
