[tool.poetry]
name = "nextgencard"
version = "0.1.0"
description = ""
authors = ["Olena <155203553+elgatoafk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
nanoid = "^2.0.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bycript"], version = "^1.7.4"}
aiosqlite = "^0.20.0"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
